--- a/frontend/task-management/src/Pages/Dashboard/Home.css
+++ b/frontend/task-management/src/Pages/Dashboard/Home.css
@@ -1,14 +1,20 @@
+body {
+    max-width: 100vw;
+}
+
 .home {
     background-color: #33373a;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    min-width: 100vw;
 }
 
 .home-container {
     display: flex;
     flex: 1;
     margin: 50px;
+    width: 100vw;
 }
 
 .home-sidebar {
@@ -173,6 +179,7 @@
 @media (max-width: 780px) {
     .home-container {
         align-content: center;
+        min-width: 100vw;
     }
 
     .home-sidebar {
@@ -180,6 +187,6 @@
     }
 
     .home-content {
-        min-width: 100%;
+        min-width: 100vw;
     }
 }
